Save location.href to clipboard by clicking menubar icon

--- a/MenubarExample Extension/Info.plist
+++ b/MenubarExample Extension/Info.plist
@@ -50,10 +50,10 @@
 		<dict>
 			<key>Allowed Domains</key>
 			<array>
-				<string>*.webkit.org</string>
+				<string>*</string>
 			</array>
 			<key>Level</key>
-			<string>Some</string>
+			<string>All</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
